pie chart working

--- a/osci/preprocess/match_company/company_domain_match_list.yaml
+++ b/osci/preprocess/match_company/company_domain_match_list.yaml
@@ -1844,3 +1844,8 @@
   regex:
     - ^.*\.infosys\.com$
   industry: Technology
+
+# - company: Unknown
+#   domains:
+#   regex:
+#   industry: Technology
